--- a/messages_json_js.opam
+++ b/messages_json_js.opam
@@ -10,7 +10,7 @@ bug-reports: "https://github.com/Chimrod/messages/issues"
 depends: [
   "dune" {>= "2.5"}
   "ocaml" {>= "4.08.0"}
-  "messages_common" {>= "0.0.1"}
+  "messages" {>= "0.0.1"}
   "gen_js_api" {>= "1.0.6"}
   "js_of_ocaml" {>= "3.8.0"}
   "js_of_ocaml-ppx" {>= "3.8.0"}
